[gd_scene load_steps=5 format=3 uid="uid://ccmivnmm1cxdu"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_dcsrn"]
[ext_resource type="Theme" uid="uid://ohbxnwpsmf82" path="res://themes/main_theme.tres" id="1_r2ti2"]
[ext_resource type="LabelSettings" uid="uid://b185ewcntfgqt" path="res://themes/score_label_settings.tres" id="3_dt71d"]
[ext_resource type="LabelSettings" uid="uid://csmkhjnwpofo8" path="res://themes/final_score_label_settings.tres" id="3_s3gaa"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dcsrn")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -41.5
offset_right = 140.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r2ti2")
text = "START"

[node name="GameOverMessage" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 80.0
offset_right = 216.0
offset_bottom = 128.0
grow_horizontal = 2
theme = ExtResource("1_r2ti2")
text = "GAME OVER"

[node name="FinalScore" type="Label" parent="GameOverMessage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 56.0
offset_right = 312.0
offset_bottom = 94.0
grow_horizontal = 2
text = "score: "
label_settings = ExtResource("3_s3gaa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausedMessage" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r2ti2")
text = "paused"

[node name="SheerOverlay" type="ColorRect" parent="PausedMessage"]
layout_mode = 0
offset_left = -176.0
offset_top = -216.0
offset_right = 464.0
offset_bottom = 264.0
color = Color(1, 1, 1, 0.117647)

[node name="ScoreBar" type="ColorRect" parent="."]
visible = false
offset_right = 640.0
offset_bottom = 32.0

[node name="ScoreLabel" type="Label" parent="ScoreBar"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 68.0
offset_bottom = 32.0
text = "score:"
label_settings = ExtResource("3_dt71d")

[node name="Score" type="Label" parent="ScoreBar"]
layout_mode = 0
offset_left = 80.0
offset_top = 9.0
offset_right = 224.0
offset_bottom = 32.0
text = "0"
label_settings = ExtResource("3_dt71d")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
